--- a/Day 3/Python Pizza/task-info.yaml
+++ b/Day 3/Python Pizza/task-info.yaml
@@ -15,5 +15,8 @@ files:
   - name: solution.py
     visible: true
     learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 16 Nov 2025 11:55:19 UTC"
 record: -1
